# rhemify-monorepo

./: .gitignore  Anchor.toml  CLAUDE.md  README.md  bts.jsonc  package.json  turbo.json  vercel.json
.github/workflows/: ci.yml
apps/ika-sidecar/: .env.example  package.json
apps/server/: .env.example  Makefile  go.mod  go.sum
convex/: agents.ts  aggregates.ts  anchors.ts  crons.ts  events.ts  fleet.ts  intelligence.ts  policies.ts  schema.ts  traces.ts  vendors.ts  walletBalances.ts
docs/: 402-endpoint-research.md  base-batches-application.txt  competitive-analysis.md  hackathon-positioning.md  intelligence-layer-diagram.md  intelligence-layer-spec.md  sdk-spec.md  team-workstreams.md  vendor-instrument-analysis.md
programs/rhemify-anchor/: Cargo.toml
programs/rhemify-anchor/src/: lib.rs
programs/rhemify-anchor/src/instructions/: mod.rs  write_daily_root.rs
programs/rhemify-anchor/src/state/: daily_root.rs  mod.rs
programs/rhemify-anchor/tests/: pda_seeds.rs
programs/rhemify-dwallet/: Cargo.toml
programs/rhemify-dwallet/src/: lib.rs
programs/rhemify-dwallet/src/instructions/: approve_signing.rs  freeze_agent.rs  initialize_fleet_vault.rs  mod.rs  register_agent_wallet.rs
programs/rhemify-dwallet/src/state/: agent_wallet.rs  fleet_vault.rs  mod.rs  signing_approval.rs
programs/rhemify-dwallet/tests/: pda_seeds.rs
programs/rhemos-anchor/: Cargo.toml
programs/rhemos-anchor/src/: lib.rs
programs/rhemos-anchor/src/instructions/: write_daily_root.rs
scripts/: build-vercel.mjs
tasks/: plan.md  todo.md
tools/: demo-run.sh
(+223 files in other folders)
