[package]
name = "rhemify-anchor"
version = "0.1.0"
description = "Minimal Solana program for anchoring Rhemify trace Merkle roots onchain"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "rhemify_anchor"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "1.0.0", features = ["init-if-needed"] }
