[package]
name = "rhemify-dwallet"
version = "0.1.0"
description = "Solana program for dWallet fleet vaults, agent wallets, and signing approvals"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "rhemify_dwallet"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "1.0.0", features = ["init-if-needed"] }
